[project]
name = "ai-agents-in-lang-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ai-custom-utils",
    "aiosqlite==0.20.0",
    "beautifulsoup4==4.12.3",
    "duckduckgo-search==5.3.1b1",
    "gradio==4.31.3",
    "langchain==0.2.0",
    "langchain-community==0.2.0",
    "langchain-core==0.2.0",
    "langchain-openai==0.1.7",
    "langgraph==0.0.53",
    "openai==1.30.1",
    "pygments==2.17.2",
    "pygraphviz==1.13",
    "python-dotenv~=1.0.1",
    "tavily-python==0.3.3",
]

[tool.uv.sources]
ai-custom-utils = { git = "https://github.com/davoshack/ai-custom-utils.git" }
